@@ -1,5 +1,7 @@
 [Changes 1.2c01]
 
+* Correctly handle channel sync across multi-server. (caf)
+
 * Fixes and improvements for channel logging. (caf)
 
 * Use correct (MODECHAN and MODEUSER) display level for channel and user
